# mockingbird

./: .gitignore  QUICK_START.md  README.md  TASK_COMPLETION_SUMMARY.md  pyproject.toml  requirements.txt  setup.sh  test_app_imports.py  test_cli.py  test_sample_video.py
src/: README.md  __init__.py  __main__.py  cli.py  main.py
src/models/: __init__.py  core.py
src/services/: __init__.py  asr_service.py  audio_processing.py  audio_separator_service.py  base.py  config_manager.py  dubbing_service.py  error_handler.py  file_handler.py  package_manager.py  tts_service.py  (+3 more)
tests/: __init__.py  conftest.py  test_asr_error_handling.py  test_asr_properties.py  test_audio_extraction.py  test_audio_mixing_properties.py  test_audio_processing_errors.py  test_configuration_validation_properties.py  test_edit_preservation_properties.py  test_error_handling_edge_cases.py  test_error_logging_properties.py  test_export_error_handling.py  test_file_validation.py  test_file_validation_edge_cases.py  test_gpu_utilization_properties.py  test_integration_sample_video.py  test_multilanguage_output_properties.py  test_output_format_properties.py  test_package_integrity_properties.py  test_resource_cleanup_properties.py  test_subtitle_export_properties.py  test_timing_validation_properties.py  test_translation_fallback.py  test_translation_properties.py  test_tts_error_handling.py  test_tts_timing_properties.py  test_tts_voice_mapping_properties.py  test_ui_data_integrity_properties.py  test_url_processing.py  test_volume_ducking_properties.py  test_workflow_progression_properties.py
(+7 files in other folders)
